# dfaheyblog

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.web  LICENSE.md  Makefile  README.md  docker-compose.yml  docker_startup.sh  manage.py  package.json  pegasus-config.yaml  pyproject.toml  tailwind.config.js  tsconfig.json
api-client/: runtime.ts
api-client/.openapi-generator/: FILES
api-client/apis/: ApiApi.ts  DashboardApi.ts  PegasusApi.ts  TeamsApi.ts
api-client/models/: AggregateEmployeeData.ts  CustomUser.ts  DepartmentEnum.ts  Employee.ts  Invitation.ts  JWT.ts  Login.ts  LoginResponse.ts  Membership.ts  OtpRequest.ts  PaginatedEmployeeList.ts  PaginatedInvitationList.ts  PaginatedTeamList.ts  PasswordChange.ts  PatchedCustomUser.ts  PatchedEmployee.ts  PatchedInvitation.ts  PatchedTeam.ts  Register.ts  RestAuthDetail.ts  RoleEnum.ts  Team.ts  TokenRefresh.ts  TokenVerify.ts  UserSignupStats.ts  index.ts
apps/teams/: forms.py  models.py  signals.py
apps/teams/migrations/: 0003_alter_membership_unique_together_flag.py
apps/teams/tests/: test_teams_middleware.py
apps/users/: forms.py
apps/users/migrations/: 0002_alter_customuser_avatar.py
apps/web/: context_processors.py
assets/styles/: site-tailwind.css
deploy/: app-spec.yaml
dfaheyblog/: celery.py  settings.py  settings_production.py  urls.py  wsgi.py
pegasus/apps/examples/: urls.py
static/css/: site-tailwind.css
static/js/: app-bundle.js  pegasus-bundle.js  site-bundle.js  site-tailwind-bundle.js  vue-object-lifecycle-bundle.js
templates/account/: signup.html
templates/web/components/: app_nav_menu_items.html
(+1 files in other folders)
